spring学习和jvm笔记整理